Add new section

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
       <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600i,700i&effect=destruction|crackle" rel="stylesheet">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
-      <link rel="stylesheet" type="text/css" href="css/style.css">
-      
+      <link rel="stylesheet" type="text/css" href="css/style.css">    
       <title>Parafia Złoczew</title>
 		</head>
 		<body>
@@ -19,6 +18,7 @@
               <div class="carousel-caption d-none d-md-block">
                 <h5 class="font-effect-destruction">"Proście, a będzie wam dane, szukajcie, a znajdziecie, kołaczcie, a otworzą wam."</h5>
                 <p class="font-effect-destruction">(Mt 7,7-11)</p>
+                <button type="button" class="btn btn-outline-primary">Wchodzę</button>
               </div>
             </div>
             <div class="carousel-item">
@@ -26,6 +26,7 @@
               <div class="carousel-caption d-none d-md-block">
                 <h5 class="font-effect-destruction">"Na początku było Słowo, a Słowo było u Boga, i Bogiem było Słowo."</h5>
                 <p class="font-effect-destruction">(J 1,1-5.9-12)</p>
+                <button type="button" class="btn btn-outline-primary">Wchodzę</button>
               </div>
             </div>
             <div class="carousel-item">
@@ -33,6 +34,7 @@
               <div class="carousel-caption d-none d-md-block">
                 <h5 class="font-effect-destruction">"Pan podtrzymuje wszystkich, którzy padają, i podnosi wszystkich zgnębionych."</h5>
                 <p class="font-effect-destruction">Ps 145, 15</p>
+                <button type="button" class="btn btn-outline-primary">Wchodzę</button>
               </div>
             </div>
           </div>
