--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <title>Parafia Złoczew</title>
 		</head>
 		<body>
-      <div class="jubotron jumbotron-fluid">
+      <div class="jubotron jumbotron-fluid" id="my-jumbotron">
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="15000" data-pause="false">
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -102,7 +102,107 @@
             </div>  
           </div> 
         </nav>
-      </div>		
+      </div>
+
+      <footer>
+        <div class="container footer-top">
+          <div class="row">
+            <div class="col about-us">
+              <h4>O parafii</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis error magnam dolor numquam provident cupiditate laudantium. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis error magnam dolor numquam provident cupiditate laudantium. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis error magnam dolor numquam provident cupiditate laudantium</p>
+            </div>
+            <div class="col address">
+              <h4>kontakt</h4>
+              <div class="row nested">
+                <div class="col-6">Adres:</div>
+                <div class="col-6">ul. Kościelna 16 98-270 Złoczew Poland</div>
+              </div>
+              <div class="row nested">
+                <div class="col-6">Telephonon:</div>
+                <div class="col-6">+48 43 8202210</div>
+              </div>
+              <div class="row nested">
+                <div class="col col-6">E-mail:</div>
+                <div class="col col-6">success@gmail.com</div>
+              </div>
+            </div>
+            <div class="col parish-office">
+              <h4>kancelaria parafialna</h4>
+              <div class="row nested">
+                <div class="col col-6">Wtorek:</div>
+                <div class="col col-6">16.00 - 17.00</div>
+              </div>
+              <div class="row nested">
+                <div class="col col-6">Czwartek:</div>
+                <div class="col col-6">16.00 - 17.00</div>
+              </div>
+              <div class="row nested">
+                <div class="col col-6">Sobota:</div>
+                <div class="col col-6">08.30 - 10.00</div>
+              </div>              
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col service-time">   
+              <h3>porządek mszy świętych</h3>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col service-time-weekdays"> 
+              <h5>Dni powszednie</h5>  
+              <div class="service-hours-container ">
+                <div class="row nested">
+                  <div class="col col-6"><p>Klasztor</p></div>
+                  <div class="col col-6"><p>07.00 - 08.00</p></div>
+                </div>
+                <div class="row nested">
+                  <div class="col col-6"><p>Fara</p></div>
+                  <div class="col col-6"><p>18.00 - 19.00</p></div>
+                </div>
+              </div>
+            </div>
+            <div class="col service-time-holidays"> 
+              <h5>Niedziela i Święta</h5>  
+              <div class="service-hours-container">
+                <div class="row nested">
+                  <div class="col col-6"><p>Klasztor</p></div>
+                  <div class="col col-6"><p>07.00 - 08.00</p></div>
+                </div>
+                <div class="row nested">
+                  <div class="col col-6"><p>Fara</p></div>
+                  <div class="col col-6"><p>09.30 - 10.30</p></div>
+                </div>
+                <div class="row nested">
+                  <div class="col col-6"><p>Fara</p></div>
+                  <div class="col col-6"><p>10.00 - 11.00</p></div>
+                </div>
+                <div class="row nested">
+                  <div class="col col-6"><p>Fara</p></div>
+                  <div class="col col-6"><p>11.30 - 12.30</p></div>
+                </div>
+                <div class="row nested">
+                  <div class="col col-6"><p>Fara</p></div>
+                  <div class="col col-6"><p>18.00 - 19.00</p></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <div class="container">
+            <div class="row">
+              <div class="col made-by">
+                <i class="far fa-copyright"><a href="#">Made by Kulek 2018</a></i>    
+              </div>
+              <div class="col to-the-top">
+                <a href="#my-jumbotron">To the Top<i class="fas fa-angle-double-up"></i></a>   
+              </div>
+            </div>
+          </div>
+        </div>    
+      </footer> 		
 			
 
       
