--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
               <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade priest-carousel" data-ride="carousel" data-interval="6000" data-pause="false">
                 <div class="carousel-inner wierusz-inner">
                   <div class="carousel-item active">
-                    <img class="d-block w-100 rounded-circle img-thumbnail" src="images/wierusz.png" alt="First slide">
+                    <img class="d-block rounded-circle img-thumbnail" src="images/wierusz.png" alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100 rounded-circle img-thumbnail" src="images/wierusz-young.jpg" alt="Second slide">
+                    <img class="d-block rounded-circle img-thumbnail" src="images/wierusz-young.jpg" alt="Second slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100 rounded-circle img-thumbnail" src="images/wierusz-kid.jpg" alt="Second slide">
+                    <img class="d-block rounded-circle img-thumbnail" src="images/wierusz-kid.jpg" alt="Second slide">
                   </div>
                 </div>
               </div>  
@@ -135,13 +135,13 @@
               <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade priest-carousel" data-ride="carousel" data-interval="6000" data-pause="false">
                 <div class="carousel-inner tomaszewski-inner">
                   <div class="carousel-item active">
-                    <img class="d-block w-100 rounded-circle img-thumbnail" src="images/tomaszewski.png" alt="First slide">
+                    <img class="d-block rounded-circle img-thumbnail" src="images/tomaszewski.png" alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100 rounded-circle img-thumbnail" src="images/tomaszewski-young.jpg" alt="Second slide">
+                    <img class="d-block rounded-circle img-thumbnail" src="images/tomaszewski-young.jpg" alt="Second slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100 rounded-circle img-thumbnail" src="images/tomaszewski-kid.jpg" alt="Third slide">
+                    <img class="d-block rounded-circle img-thumbnail" src="images/tomaszewski-kid.jpg" alt="Third slide">
                   </div>
                 </div>
               </div>  
