Add section updates

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<head>    
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600i,700i&effect=destruction|crackle" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Open+Sans|Pacifico" rel="stylesheet">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
       <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -90,6 +90,21 @@
           </div> 
         </nav>
       </div>
+      <section class="updates-board">
+        <div class="container updates-board-container">
+          <h3>Aktualności</h3>
+          <div class="current-updates">
+            <p>Parafia pw. św. Andrzeja Apostoła w Złoczewie zaprasza dzieci i młodzież do zwiedzania największej w Polsce kopalni odkrywkowej węgla brunatnego w Bełchatowie 07.08.2018r. (wtorek). Wyjazd godz. 08.00 (parking OSP). Koszt 20 zł.</p>
+            <h4>A w programie</h4>
+            <ul>
+              <li>Prelekcja w "Sali Tradycji" kopalni Bełchatów oraz przejazd na tarasy widokowe</li>
+              <li>Atrakcje Ośrodka sportu i Rekreacji "Góra Kamieńsk"</li>
+              <li>Seans filmowy w kinie Helios w Bełchatowie</li>
+            </ul>
+          </div>
+        </div>
+         
+      </section>
       <section class="priests">
         <div class="container ">
           <div>
