--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <nav class="navbar navbar-expand-lg fixed-top">
           <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
               <img src="images/brand-st-andrew.png" alt="St.Andrew">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,21 +49,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Intencje mszalne <span class="sr-only"></span></a>
+                  <a class="nav-link" href="intencje.html">Intencje mszalne <span class="sr-only"></span></a>
                 </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Sakramenty
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Chrzest</a>
-                    <a class="dropdown-item" href="#">Pierwsza Komunia Święta</a>
-                    <a class="dropdown-item" href="#">Bierzmowanie</a>
-                    <a class="dropdown-item" href="#">Małrzeństwo</a>
-                    <a class="dropdown-item" href="#">Pokuta</a>
-                    <a class="dropdown-item" href="#">Sakrament chorych</a>
-                    <a class="dropdown-item" href="#">Pogrzeb</a>
-                  </div>
+                <li class="nav-item active">
+                  <a class="nav-link" href="sakramenty.html">Sakramenty<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -91,10 +80,10 @@
         </nav>
       </div>
       <section class="updates-board">
+        <h3>Aktualności</h3>
         <div class="container updates-board-container">
-          <h3>Aktualności</h3>
-          <div class="current-updates">
-            <p>Parafia pw. św. Andrzeja Apostoła w Złoczewie zaprasza dzieci i młodzież do zwiedzania największej w Polsce kopalni odkrywkowej węgla brunatnego w Bełchatowie 07.08.2018r. (wtorek). Wyjazd godz. 08.00 (parking OSP). Koszt 20 zł.</p>
+          <div class="current-updates-one hover-style">
+            <p>ONE Parafia pw. św. Andrzeja Apostoła w Złoczewie zaprasza dzieci i młodzież do zwiedzania największej w Polsce kopalni odkrywkowej węgla brunatnego w Bełchatowie 07.08.2018r. (wtorek). Wyjazd godz. 08.00 (parking OSP). Koszt 20 zł.</p>
             <h4>A w programie</h4>
             <ul>
               <li>Prelekcja w "Sali Tradycji" kopalni Bełchatów oraz przejazd na tarasy widokowe</li>
@@ -102,8 +91,25 @@
               <li>Seans filmowy w kinie Helios w Bełchatowie</li>
             </ul>
           </div>
-        </div>
-         
+          <div class="current-updates-two hover-style">
+            <p>TWO Parafia pw. św. Andrzeja Apostoła w Złoczewie zaprasza dzieci i młodzież do zwiedzania największej w Polsce kopalni odkrywkowej węgla brunatnego w Bełchatowie 07.08.2018r. (wtorek). Wyjazd godz. 08.00 (parking OSP). Koszt 20 zł.</p>
+            <h4>A w programie</h4>
+            <ul>
+              <li>Prelekcja w "Sali Tradycji" kopalni Bełchatów oraz przejazd na tarasy widokowe</li>
+              <li>Atrakcje Ośrodka sportu i Rekreacji "Góra Kamieńsk"</li>
+              <li>Seans filmowy w kinie Helios w Bełchatowie</li>
+            </ul>
+          </div>
+          <div class="current-updates-three hover-style">
+            <p>Three Parafia pw. św. Andrzeja Apostoła w Złoczewie zaprasza dzieci i młodzież do zwiedzania największej w Polsce kopalni odkrywkowej węgla brunatnego w Bełchatowie 07.08.2018r. (wtorek). Wyjazd godz. 08.00 (parking OSP). Koszt 20 zł.</p>
+            <h4>A w programie</h4>
+            <ul>
+              <li>Prelekcja w "Sali Tradycji" kopalni Bełchatów oraz przejazd na tarasy widokowe</li>
+              <li>Atrakcje Ośrodka sportu i Rekreacji "Góra Kamieńsk"</li>
+              <li>Seans filmowy w kinie Helios w Bełchatowie</li>
+            </ul>
+          </div>
+        </div>  
       </section>
       <section class="priests">
         <div class="container ">
