Add new functions

--- a/intencje.html
+++ b/intencje.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" type="text/css" href="css/style.css">
       <title>Parafia Złoczew</title>
     </head>
-		<body>
+		<body class="body-with-background-color">
       <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
           <a class="navbar-brand" href="index.html">
@@ -52,7 +52,7 @@
           </div>  
         </div> 
       </nav>
-      <div class="white-stripe" id="top-of-the-page"></div>
+      <div class="white-stripe" id="up"></div>
       <div class="service-times">
         <h3>Intencje mszalne</h3>
         <div class="container">
@@ -316,7 +316,25 @@
                     </tr>
                     <tr class="fara">
                       <th scope="row">Fara</th>
-                      <td>18.00</td>
+                      <td>09.30</td>
+                      <td>ks. Michał Tomaszewski</td>
+                      <td>I AM SUNDAY Wojciecha Grobelny – od właścicieli i pracowników Zakładu „Borowina” w Broszkach</td>
+                    </tr>
+                    <tr class="nunery">
+                      <th scope="row">Klasztor</th>
+                      <td>10.00</td>
+                      <td>ks. Piotr Wierusz</td>
+                      <td>Henryka Bednarka – od mamy</td>
+                    </tr>
+                    <tr class="fara">
+                      <th scope="row">Fara</th>
+                      <td>11.30</td>
+                      <td>ks. Michał Tomaszewski</td>
+                      <td>I AM SUNDAY Wojciecha Grobelny – od właścicieli i pracowników Zakładu „Borowina” w Broszkach</td>
+                    </tr>
+                    <tr class="fara">
+                      <th scope="row">Fara</th>
+                      <td>11.30</td>
                       <td>ks. Michał Tomaszewski</td>
                       <td>I AM SUNDAY Wojciecha Grobelny – od właścicieli i pracowników Zakładu „Borowina” w Broszkach</td>
                     </tr>
@@ -552,16 +570,10 @@
           </div>
         </div>
         <div class="footer-bottom">
-          <div class="container">
-            <div class="row">
-              <div class="col made-by">
-                <i class="far fa-copyright"><a href="#">Made by Kulek 2018</a></i>    
-              </div>
-              <div class="col to-the-top">
-                <a href="#my-jumbotron">To the Top<i class="fas fa-angle-double-up"></i></a>   
-              </div>
-            </div>
+          <div class="col made-by">
+            <i class="far fa-copyright"><a href="#">Made by Kulek 2018</a></i>    
           </div>
+          <a href="#up"><i id="to-the-top" class="fas fa-angle-double-up"></i></a>  
         </div>    
       </footer>		
 			
