--- a/sakramenty.html
+++ b/sakramenty.html
@@ -9,7 +9,7 @@
 	      <link rel="stylesheet" type="text/css" href="css/style.css">
 	      <title>Parafia Złoczew</title>
 		</head>
-		<body>
+		<body class="body-with-background-color">
       	<nav class="navbar navbar-expand-lg fixed-top">
           <div class="container">
             <a class="navbar-brand" href="index.html">
@@ -52,7 +52,7 @@
             </div>  
           </div> 
         </nav>
-	      <div class="white-stripe" id="top-of-the-page"></div>
+	      <div class="white-stripe" id="up"></div>
 	      <div class="my-container">
 	  		<div id="list-example" class="list-group">
 				<a class="list-group-item list-group-item-action" href="#list-item-1">Chrzest</a>
@@ -381,16 +381,10 @@
 	          </div>
 	        </div>
 	        <div class="footer-bottom">
-	          <div class="container">
-	            <div class="row">
-	              <div class="col made-by">
-	                <i class="far fa-copyright"><a href="#">Made by Kulek 2018</a></i>    
-	              </div>
-	              <div class="col to-the-top">
-	                <a href="#my-jumbotron">To the Top<i class="fas fa-angle-double-up"></i></a>   
-	              </div>
-	            </div>
-	          </div>
+			  <div class="col made-by">
+			    <i class="far fa-copyright"><a href="#">Made by Kulek 2018</a></i>    
+			  </div>
+			  <a href="#up"><i id="to-the-top" class="fas fa-angle-double-up"></i></a>  
 	        </div>    
 	      </footer> 		
 			
