--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <title>Parafia Złoczew</title>
 		</head>
 		<body>
-      <div class="jubotron jumbotron-fluid" id="my-jumbotron">
-        <div id="carouselExampleSlidesOnly" class="carousel slide my-jumbotron-carousel" data-ride="carousel" data-interval="15000" data-pause="false">
+      <div class="jubotron jumbotron-fluid" id="up">
+        <div id="carouselExampleSlidesOnly" class="carousel slide my-jumbotron-carousel carousel-fade" data-ride="carousel" data-interval="15000" data-pause="false">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img class="d-block w-100" src="images/hands.jpg" alt="First slide">
@@ -83,6 +83,7 @@
         <h3>Aktualności</h3>
         <div class="container updates-board-container">
           <div class="current-updates-one hover-style">
+            <i class="fas fa-thumbtack"></i>
             <p>ONE Parafia pw. św. Andrzeja Apostoła w Złoczewie zaprasza dzieci i młodzież do zwiedzania największej w Polsce kopalni odkrywkowej węgla brunatnego w Bełchatowie 07.08.2018r. (wtorek). Wyjazd godz. 08.00 (parking OSP). Koszt 20 zł.</p>
             <h4>A w programie</h4>
             <ul>
@@ -92,6 +93,7 @@
             </ul>
           </div>
           <div class="current-updates-two hover-style">
+            <i class="fas fa-thumbtack"></i>
             <p>TWO Parafia pw. św. Andrzeja Apostoła w Złoczewie zaprasza dzieci i młodzież do zwiedzania największej w Polsce kopalni odkrywkowej węgla brunatnego w Bełchatowie 07.08.2018r. (wtorek). Wyjazd godz. 08.00 (parking OSP). Koszt 20 zł.</p>
             <h4>A w programie</h4>
             <ul>
@@ -101,6 +103,7 @@
             </ul>
           </div>
           <div class="current-updates-three hover-style">
+            <i class="fas fa-thumbtack"></i>
             <p>Three Parafia pw. św. Andrzeja Apostoła w Złoczewie zaprasza dzieci i młodzież do zwiedzania największej w Polsce kopalni odkrywkowej węgla brunatnego w Bełchatowie 07.08.2018r. (wtorek). Wyjazd godz. 08.00 (parking OSP). Koszt 20 zł.</p>
             <h4>A w programie</h4>
             <ul>
@@ -121,13 +124,13 @@
               <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade priest-carousel" data-ride="carousel" data-interval="6000" data-pause="false">
                 <div class="carousel-inner wierusz-inner">
                   <div class="carousel-item active">
-                    <img class="d-block rounded-circle img-thumbnail" src="images/wierusz.png" alt="First slide">
+                    <img class="d-block rounded-circle" src="images/wierusz.png" alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block rounded-circle img-thumbnail" src="images/wierusz-young.jpg" alt="Second slide">
+                    <img class="d-block rounded-circle" src="images/wierusz-young.jpg" alt="Second slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block rounded-circle img-thumbnail" src="images/wierusz-kid.jpg" alt="Second slide">
+                    <img class="d-block rounded-circle" src="images/wierusz-kid.jpg" alt="Second slide">
                   </div>
                 </div>
               </div>  
@@ -170,25 +173,24 @@
           </div>
         </div>
       </section>
-      <section class="parish-figures">
+      <section id="scroll-detector" class="parish-figures">
         <div class="container">
           <div class="parish-figures-container">
-            <div class="area-number">
-              <h5>14867
-                <p>hektarów</p>
-              </h5> 
+            <div class="number area-number" data-final-number='303'>
+              <h5>0</h5>   
             </div>
-            <div class="family-number">
-              <h5>8575
-                <p>rodzin</p>
-              </h5>
+            <div class="number family-number" data-final-number='299'>
+              <h5>0</h5>    
             </div>
-            <div class="worship-groups">
-              <h5>15
-                <p>grup modlitewnych</p>
-              </h5>
+            <div class="number worship-groups" data-final-number='18'>
+              <h5>0</h5>              
             </div>
-          </div>  
+          </div>
+          
+          <p class="number-caption area-number-caption">lat istnienia</p>  
+          <p class="number-caption family-number-caption">rodzin</p>
+          <p class="number-caption worship-groups-caption">grup modlitewnych</p>
+	     
         </div>
       </section>  
       <footer>
@@ -414,16 +416,10 @@
           </div>
         </div>
         <div class="footer-bottom">
-          <div class="container">
-            <div class="row">
-              <div class="col made-by">
-                <i class="far fa-copyright"><a href="#">Made by Kulek 2018</a></i>    
-              </div>
-              <div class="col to-the-top">
-                <a href="#my-jumbotron">To the Top<i class="fas fa-angle-double-up"></i></a>   
-              </div>
-            </div>
-          </div>
+		  <div class="col made-by">
+		    <i class="far fa-copyright"><a href="#">Made by Kulek 2018</a></i>    
+		  </div>
+		  <a href="#up"><i id="to-the-top" class="fas fa-angle-double-up"></i></a>  
         </div>    
       </footer> 		
 			
