--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           </div>
         </div>  
       </section>
-      <section class="priests">
+      <section class="priests" id="#test">
         <div class="container ">
           <div>
             <blockquote><h3>Jezus rzekł do Szymona: <i>«Nie bój się, odtąd ludzi będziesz łowił»</i><br>I przyciągnąwszy łodzie do brzegu, zostawili wszystko i poszli za Nim.</h3></blockquote>
@@ -159,13 +159,13 @@
               <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade priest-carousel" data-ride="carousel" data-interval="6000" data-pause="false">
                 <div class="carousel-inner tomaszewski-inner">
                   <div class="carousel-item active">
-                    <img class="d-block rounded-circle img-thumbnail" src="images/tomaszewski.png" alt="First slide">
+                    <img class="d-block rounded-circle" src="images/tomaszewski.png" alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block rounded-circle img-thumbnail" src="images/tomaszewski-young.jpg" alt="Second slide">
+                    <img class="d-block rounded-circle" src="images/tomaszewski-young.jpg" alt="Second slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block rounded-circle img-thumbnail" src="images/tomaszewski-kid.jpg" alt="Third slide">
+                    <img class="d-block rounded-circle" src="images/tomaszewski-kid.jpg" alt="Third slide">
                   </div>
                 </div>
               </div>  
@@ -185,12 +185,10 @@
             <div class="number worship-groups" data-final-number='18'>
               <h5>0</h5>              
             </div>
-          </div>
-          
+          </div>   
           <p class="number-caption area-number-caption">lat istnienia</p>  
           <p class="number-caption family-number-caption">rodzin</p>
           <p class="number-caption worship-groups-caption">grup modlitewnych</p>
-	     
         </div>
       </section>  
       <footer>
