--- a/sakramenty.html
+++ b/sakramenty.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600i,700i&effect=destruction|crackle" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
-	    crossorigin="anonymous">
+	 crossorigin="anonymous">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
-	    crossorigin="anonymous">
+	 crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Parafia Złoczew</title>
 </head>
@@ -17,10 +17,10 @@
 	<nav class="navbar navbar-expand-lg fixed-top">
 		<div class="container">
 			<a class="navbar-brand" href="index.html">
-				<img src="images/logo.jpg" alt="St.Andrew">
+				<img src="images/fara.jpg" alt="St.Andrew">
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-			    aria-expanded="false" aria-label="Toggle navigation">
+			 aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 				<span class="navbar-toggler-icon"></span>
 				<span class="navbar-toggler-icon"></span>
@@ -36,21 +36,10 @@
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true"
 						    aria-expanded="false">
-                    Zespoły parafialne
-                  </a>
+							Grupy duszpasterskie
+						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="#">Action</a>
-							<a class="dropdown-item" href="#">Another action</a>
-							<a class="dropdown-item" href="#">Something else here</a>
-						</div>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true"
-						    aria-expanded="false">
-                    Zespoły muzyczne
-                  </a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="#">Action</a>
+							<a class="dropdown-item" href="bands.html">Parafialne Zepoły Muzyczne</a>
 							<a class="dropdown-item" href="#">Another action</a>
 							<a class="dropdown-item" href="#">Something else here</a>
 						</div>
@@ -414,7 +403,7 @@
 					<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Historia
 						parafii</button>
 					<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
-					    aria-hidden="true">
+					 aria-hidden="true">
 						<div class="modal-dialog modal-lg">
 							<div class="modal-content">
 								<div class="accordion" id="accordionExample">
@@ -422,7 +411,7 @@
 										<div class="card-header" id="headingOne">
 											<h5 class="mb-0">
 												<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
-												    aria-controls="collapseOne">
+												 aria-controls="collapseOne">
 													Wiek XVII - lata 1600 - 1611
 												</button>
 											</h5>
@@ -443,7 +432,7 @@
 										<div class="card-header" id="headingTwo">
 											<h5 class="mb-0">
 												<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"
-												    aria-expanded="false" aria-controls="collapseTwo">
+												 aria-expanded="false" aria-controls="collapseTwo">
 													Wiek XVII - lata 1613 - 1690
 												</button>
 											</h5>
@@ -464,7 +453,7 @@
 										<div class="card-header" id="headingThree">
 											<h5 class="mb-0">
 												<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"
-												    aria-expanded="false" aria-controls="collapseThree">
+												 aria-expanded="false" aria-controls="collapseThree">
 													Wiek XVIII
 												</button>
 											</h5>
@@ -482,7 +471,7 @@
 										<div class="card-header" id="headingFour">
 											<h5 class="mb-0">
 												<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour"
-												    aria-expanded="false" aria-controls="collapseFour">
+												 aria-expanded="false" aria-controls="collapseFour">
 													Wiek XIX
 												</button>
 											</h5>
@@ -499,7 +488,7 @@
 										<div class="card-header" id="headingFive">
 											<h5 class="mb-0">
 												<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive"
-												    aria-expanded="false" aria-controls="collapseFive">
+												 aria-expanded="false" aria-controls="collapseFive">
 													Wiek XX - lata 1907 - 1946
 												</button>
 											</h5>
@@ -518,7 +507,7 @@
 										<div class="card-header" id="headingSix">
 											<h5 class="mb-0">
 												<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSix"
-												    aria-expanded="false" aria-controls="collapseSix">
+												 aria-expanded="false" aria-controls="collapseSix">
 													Wiek XX - lata 1975 - 1995
 												</button>
 											</h5>
@@ -536,7 +525,7 @@
 										<div class="card-header" id="headingSeven">
 											<h5 class="mb-0">
 												<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSeven"
-												    aria-expanded="false" aria-controls="collapseSeven">
+												 aria-expanded="false" aria-controls="collapseSeven">
 													Wiek XXI
 												</button>
 											</h5>
@@ -687,9 +676,9 @@
 	<script type="text/javascript" src="js/scripts.js"></script>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-	    crossorigin="anonymous"></script>
+	 crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
-	    crossorigin="anonymous"></script>
+	 crossorigin="anonymous"></script>
 </body>
 
 </html>
