--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="images/logo.jpg" alt="St.Andrew"> 
+          <img src="images/fara.jpg" alt="St.Andrew"> 
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,7 +66,7 @@
                     Grupy duszpasterskie
                   </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="bands.html">Parafialne Zespoły Muzyczne</a>
                 <a class="dropdown-item" href="#">Another action</a>
                 <a class="dropdown-item" href="#">Something else here</a>
               </div>
