Add new sections

--- a/bands/miriam.html
+++ b/bands/miriam.html
@@ -9,15 +9,15 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
     crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="../css/style.css">
   <title>Parafia Złoczew</title>
 </head>
 
 <body class="body-with-background-color">
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">
-            <img src="images/fara.jpg" alt="St.Andrew">
+      <a class="navbar-brand" href="../index.html">
+            <img src="../images/fara.jpg" alt="St.Andrew">
           </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,19 +28,19 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="intencje.html">Intencje mszalne <span class="sr-only"></span></a>
+            <a class="nav-link" href="../intencje.html">Intencje mszalne <span class="sr-only"></span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="sakramenty.html">Sakramenty<span class="sr-only"></span></a>
+            <a class="nav-link" href="../sakramenty.html">Sakramenty<span class="sr-only"></span></a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Grupy duszpasterskie
                 </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="bands.html">Parafialne Zespoły Muzyczne</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="maranatha.html">Maranatha</a>
+              <a class="dropdown-item" href="andrew-angels.html">Anioły Andrzeja</a>
+              <a class="dropdown-item" href="miriam.html">Miriam</a>
             </div>
           </li>
           <!-- <li class="nav-item dropdown">
@@ -58,16 +58,16 @@
     </div>
   </nav>
   <div class="container bands-container">
-    <div class="maranatha">
+    <div class="band">
       <p>
-        Zespół Muzyczny Maranatha w obecnym składzie działa od dwóch lat w parafii pw. św Andrzeja Apostoła w
-        Złoczewie. Swoim śpiewem wyrażamy wdzięczność Bogu za życie i wszystko co nam dal. Mimo swojego młodzieńczego
-        wieku modlitwa poprzez śpiew daje nam radość i poczucie bliskości z Bogiem. Wciąż doskonalimy swój warsztat
-        wokalny uczestnicząc w organizowanych warsztatach muzycznych, prowadzonych przez instruktorów śpiewu. W
-        rodzinnej parafii zapewniamy oprawę muzyczną jednej niedzielnej Mszy św. Zapewniamy również oprawę muzyczną
-        uroczystości ślubnych w naszej ale i także w okolicznych parafiach.
+        Zespół religijny Miriam to grupa ludzi, których łączy przyjaźń i wspólna pasja do muzyki. Wspólne granie dla
+        przyjemności zapoczątkowało pomysł założenia zespołu wokalno instrumentalnego. Swoim śpiewem oraz grą wyrażamy
+        są miłość do Boga. W zeszłym roku 2017 otrzymaliśmy nagrodę główną na przeglądzie piosenki sakralnej Sacrosong
+        w Kaliszu. Nagroda ta była dla nas dużą motywacją do dalszej pracy. Obecnie mamy w planach realizację nagrań w
+        nowo powstałym domowym studiu muzycznym. Powstałe nagrania zostaną opublikowane na naszym funpage'u
+        https://www.facebook.com/ZespolMiriam/.
       </p>
-      <div class="maranatha-pictures">
+      <div class="band-pictures">
         <div class="carousel-demo"></div>
         <div class="carousel-demo carousel-demo-mobile "></div>
         <!-- <div class="carousel-demo"></div> -->
@@ -357,9 +357,9 @@
   <script>
     window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')
   </script>
-  <script type="text/javascript" src="js/scripts.js"></script>
-  <script src="plugin/src/jR3DCarousel.js"></script>
-  <script type="text/javascript" src="plugin/scripts.js"></script>
+  <script type="text/javascript" src="../js/scripts.js"></script>
+  <script src="../js/plugin/src/jR3DCarousel.js"></script>
+  <script type="text/javascript" src="../js/plugin/miriam.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
