--- a/sakramenty.html
+++ b/sakramenty.html
@@ -39,9 +39,9 @@
 							Grupy duszpasterskie
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="bands.html">Parafialne Zepoły Muzyczne</a>
-							<a class="dropdown-item" href="#">Another action</a>
-							<a class="dropdown-item" href="#">Something else here</a>
+							<a class="dropdown-item" href="./bands/maranatha.html">Maranatha</a>
+							<a class="dropdown-item" href="./bands/andrew-angels.html">Anioły Andrzeja</a>
+							<a class="dropdown-item" href="./bands/miriam.html">Miriam</a>
 						</div>
 					</li>
 				</ul>
