--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                     Grupy duszpasterskie
                   </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="bands.html">Parafialne Zespoły Muzyczne</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href="./bands/maranatha.html">Maranatha</a>
+                <a class="dropdown-item" href="./bands/andrew-angels.html">Anioły Andrzeja</a>
+                <a class="dropdown-item" href="../bands/miriam.html">Miriam</a>
               </div>
             </li>
             <!-- <li class="nav-item dropdown">
