improve section people

--- a/index.html
+++ b/index.html
@@ -148,37 +148,36 @@
       </div>
     </div>
   </section>
-  <section class="priests">
+  <section class="people">
     <div>
       <blockquote>
-        <h3>Jezus rzekł do Szymona:
-          <i>«Nie bój się, odtąd ludzi będziesz łowił»</i>
-          <br>I przyciągnąwszy łodzie do brzegu, zostawili wszystko i poszli za Nim.</h3>
+        <h3>Loving taking care of you</h3>
       </blockquote>
     </div>
-    <div class="section-priests-container">
+    <div class="section-people-container">
       <div class="left-carousel">
         <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade priest-carousel" data-ride="carousel"
           data-interval="6000" data-pause="false">
-          <div class="carousel-inner wierusz-inner">
+          <div class="carousel-inner left-inner">
             <div class="carousel-item active">
-              <img class="d-block rounded-circle" src="images/wierusz-1.jpg" alt="First slide">
+              <img class="d-block rounded-circle" src="images/people/left-img1.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block rounded-circle" src="images/wierusz-2.jpg" alt="Second slide">
+              <img class="d-block rounded-circle" src="images/people/left-img2.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block rounded-circle" src="images/wierusz-3.jpg" alt="Third slide">
+              <img class="d-block rounded-circle" src="images/people/left-img3.jpg" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block rounded-circle" src="images/wierusz-4.jpg" alt="Fourth slide">
+              <img class="d-block rounded-circle" src="images/people/left-img4.jpg" alt="Fourth slide">
             </div>
           </div>
         </div>
       </div>
-      <div class="priests-resume">
-        <div class="wierusz-center">
-          <p>PIOTR Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quam laborum maiores aspernatur libero
+      <div class="people-resume">
+        <div class="left-center">
+          <p>G R E C E Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quam laborum maiores aspernatur
+            libero
             dolorem
             error, cupiditate facilis nisi eveniet. Dolorem, animi, blanditiis porro minus facilis expedita corporis,
             odit
@@ -194,20 +193,11 @@
             corrupti
             veniam id illum consectetur dolor deleniti non. Culpa doloribus error nobis, dolores labore voluptatem
             suscipit
-            nemo quam velit sit minima blanditiis, veritatis iure corrupti iusto cupiditate. Officia tempore adipisci,
-            quibusdam,
-            consectetur voluptatum beatae sed ad voluptates, eveniet incidunt dolorum blanditiis excepturi non eos
-            quidem.
-            Veritatis, est? Enim doloribus, veniam dolorem voluptatem molestias incidunt aut iure repudiandae quis non
-            at
-            nostrum impedit error sunt quidem repellat ea beatae quas, earum ad placeat illum architecto laborum eius!
-            Aperiam
-            repellendus esse dicta. Consequuntur possimus temporibus voluptates aspernatur cum assumenda saepe beatae
-            placeat,
-            earum praesentium blanditiis adipisci, corrupti impedit quis?</p>
+            nemo quam velit sit minima blanditiis, veritatis iure corrupti iusto cupiditate. Officia tempore adipisci.
+          </p>
         </div>
-        <div class="tomaszewski-center">
-          <p>MICHAŁ Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor sunt totam incidunt repellendus
+        <div class="right-center">
+          <p>I T A L Y Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor sunt totam incidunt repellendus
             voluptatibus
             hic adipisci fuga quia facilis. Ex quidem nostrum esse cupiditate ratione velit iure? Quisquam consectetur
             hic
@@ -223,17 +213,7 @@
             aperiam
             necessitatibus doloribus animi veritatis voluptatibus? Deserunt tempora recusandae eius architecto ducimus!
             Tempora
-            similique assumenda blanditiis iure, nulla obcaecati nisi ipsum aspernatur, perspiciatis ratione, eum
-            deleniti
-            culpa ducimus asperiores inventore provident quidem illum magnam pariatur reiciendis! Animi, eos officia
-            delectus
-            saepe numquam impedit possimus id provident labore enim tempore tenetur non recusandae dignissimos
-            perferendis.
-            Cupiditate ipsam accusantium cum deleniti. Suscipit quod numquam quibusdam magnam sapiente! Fugit tempora
-            suscipit
-            facilis qui quo deleniti repudiandae ipsa at impedit tenetur, fugiat, porro quidem libero assumenda
-            corrupti
-            quis cum eos corporis vitae recusandae explicabo vero eveniet culpa placeat? Maiores nihil ipsa adipisci.
+            similique assumenda blanditiis iure, nulla obcaecati nisi ipsum aspernatur, perspiciatis ratione.
           </p>
         </div>
 
@@ -241,15 +221,18 @@
       <div class="right-carousel">
         <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade priest-carousel" data-ride="carousel"
           data-interval="6000" data-pause="false">
-          <div class="carousel-inner tomaszewski-inner">
+          <div class="carousel-inner right-inner">
             <div class="carousel-item active">
-              <img class="d-block rounded-circle" src="images/tomaszewski.png" alt="First slide">
+              <img class="d-block rounded-circle" src="images/people/right-img1.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block rounded-circle" src="images/tomaszewski-young.jpg" alt="Second slide">
+              <img class="d-block rounded-circle" src="images/people/right-img2.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block rounded-circle" src="images/tomaszewski-kid.jpg" alt="Third slide">
+              <img class="d-block rounded-circle" src="images/people/right-img3.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block rounded-circle" src="images/people/right-img4.jpg" alt="Third slide">
             </div>
           </div>
         </div>
@@ -257,23 +240,23 @@
       </div>
     </div>
   </section>
-  <section id="scroll-detector" class="parish-figures">
+  <section id="scroll-detector" class="statistics-figures">
     <div class="container">
-      <div class="parish-figures-container">
+      <div class="statistics-figures-container">
         <div class="number area-number" data-final-number='303'>
           <i class="fas fa-infinity"></i>
           <h5>0</h5>
-          <p class="number-caption area-number-caption">lat istnienia</p>
+          <p class="number-caption years-number-caption">years of experience</p>
         </div>
-        <div class="number family-number" data-final-number='299'>
+        <div class="number client-number" data-final-number='299'>
           <i class="fas fa-users"></i>
           <h5>0</h5>
-          <p class="number-caption family-number-caption">rodzin</p>
+          <p class="number-caption client-number-caption">happy clients</p>
         </div>
-        <div class="number worship-groups" data-final-number='18'>
+        <div class="number projects-groups" data-final-number='18'>
           <i class="fab fa-gratipay"></i>
           <h5>0</h5>
-          <p class="number-caption worship-groups-caption">grup modlitewnych</p>
+          <p class="number-caption projects-groups-caption">projects made</p>
         </div>
       </div>
     </div>
@@ -463,7 +446,7 @@
             <div class="col col-6">30925600040044623120000030</div>
           </div>
         </div>
-        <div class="col parish-office">
+        <div class="col statistics-office">
           <h4>kancelaria parafialna</h4>
           <div class="row nested">
             <div class="col col-6">Wtorek:</div>
